--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
                 <img src="img3.jpg" alt="">
                 <p>To the best father ever, happy birthday!</p>
             </div>
+            <div class="frames frame4">
+                <img src="img4.jpg" alt="">
+                <p>Happy birthday to the man who makes every day better! Love you, Father!”</p>
         </div>
+            <div class="frames frame5">
+                 <img src="img5.jpg" alt="">
+                 <p>To my biggest supporter and best friend, happy birthday, Father!</p>
+            </div>
 
     </div>
 </body>
